outlog.log
  File "manage.py", line 16
    ) from exc
         ^
SyntaxError: invalid syntax
